--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -33,8 +33,14 @@ dependencies {
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
   testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
   testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+  implementation 'software.amazon.awssdk:s3:2.25.60'
 }
 
 tasks.named('test') {
   useJUnitPlatform()
+}
+
+compileJava {
+  options.compilerArgs += ['--enable-preview']
 }
