알바 테이블 CRUD와 화면 구성

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=backend
+#mybatis
+mybatis.configuration.map-underscore-to-camel-case=true
+#jwt
+jwt.public.key=classpath:secret/app.pub
+jwt.private.key=classpath:secret/app.key
 spring.config.import=classpath:secret/custom.properties
