--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.1",
     "axios": "^1.7.1",
+    "expo-font": "^12.0.6",
     "framer-motion": "^11.2.4",
     "jwt-decode": "^4.0.0",
     "prettier": "^3.2.5",
