--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,3 +5,6 @@ mybatis.configuration.map-underscore-to-camel-case=true
 jwt.public.key=classpath:secret/app.pub
 jwt.private.key=classpath:secret/app.key
 spring.config.import=classpath:secret/custom.properties
+# file
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=10MB
