--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "jwt-decode": "^4.0.0",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
+    "react-datepicker": "^7.0.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1"
