240618) 공고리스트 표시 오류 해결중

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.config.import=classpath:secret/custom.properties
 # file
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=10MB
-
-#logging.level.com.backend.mapper.management=debug
+# mapper logging
+#logging.level.com.backend.mapper.jobs=debug
