--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,9 @@
     "react-datepicker": "^7.0.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
