--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.config.import=classpath:secret/custom.properties
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=10MB
 # mapper logging
-#logging.level.com.backend.mapper.jobs=debug
+logging.level.com.backend.mapper=debug
