--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -35,6 +35,8 @@ dependencies {
   testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
   implementation 'software.amazon.awssdk:s3:2.25.60'
+
+  implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('test') {
