--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=10MB
 # mapper logging
 #logging.level.com.backend.mapper.jobs=debug
+spring.jackson.serialization.FAIL_ON_SELF_REFERENCES=false
+spring.jackson.serialization.FAIL_ON_UNWRAPPED_TYPE_IDENTIFIERS=false
+spring.messages.basename=messages
