--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.config.import=classpath:secret/custom.properties
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=10MB
 # mapper logging
-#logging.level.com.backend.mapper.jobs=debug
+#logging.level.com.backend.mapper=debug
 spring.jackson.serialization.FAIL_ON_SELF_REFERENCES=false
 spring.jackson.serialization.FAIL_ON_UNWRAPPED_TYPE_IDENTIFIERS=false
 spring.messages.basename=messages
