--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,3 +13,14 @@ spring.servlet.multipart.max-request-size=10MB
 spring.jackson.serialization.FAIL_ON_SELF_REFERENCES=false
 spring.jackson.serialization.FAIL_ON_UNWRAPPED_TYPE_IDENTIFIERS=false
 spring.messages.basename=messages
+#email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=albaconnector@gmail.com
+spring.mail.password=mgmg wxjt tnku gdap
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
