--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
+    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
+    "@ckeditor/ckeditor5-react": "^7.0.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/open-sans": "^5.0.28",
@@ -24,6 +26,7 @@
     "axios": "^1.7.1",
     "expo-font": "^12.0.6",
     "framer-motion": "^11.2.4",
+    "html2canvas": "^1.4.1",
     "jwt-decode": "^4.0.0",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
