--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.1",
     "axios": "^1.7.1",
+    "date-fns": "^3.6.0",
     "expo-font": "^12.0.6",
     "framer-motion": "^11.2.4",
     "html2canvas": "^1.4.1",
