--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -38,6 +38,9 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-mail'
 //  implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+
 }
 
 tasks.named('test') {
