--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
+    "recharts": "^2.12.7",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
